made some changes

--- a/_harp/main.less
+++ b/_harp/main.less
@@ -97,6 +97,11 @@ body {
 	background: rgba(0,0,0,.9);
 }
 
+article p {
+	font-size: .75em;
+	line-height: 50px;
+}
+
 #main {
 	background: url('/bg.jpg') fixed no-repeat;
 	background-size:cover;
@@ -166,7 +171,7 @@ body {
 	background: #c0392b;
 	position: relative;
 	top: -25px;
-	padding: 45px 20px;
+	padding: 65px 20px;
 	color: #FFF;
 	width: 100%;
 	left: -50%;
@@ -185,6 +190,7 @@ body {
 		border-radius: 100%;
 		vertical-align: bottom;
 		margin: auto 10px;
+		display: none;
 	}
 }
 
