--- a/_harp/_layout.jade
+++ b/_harp/_layout.jade
@@ -4,6 +4,8 @@ html
     title Krish Dholakiya - Front-End Developer
     link(href="/main.css", type='text/css', rel="stylesheet")
     script(src="/bower_components/angular/angular.min.js")
+    // Custom RSS to JSON converter for Medium.com feed
+    script(src="https://cdn.rawgit.com/krrishd/943911cfebfa5de556a4/raw/649a186a74d9f2668418cdd2f7b3d0fe2f8d923b/rss2json.js")
     script(src="/my.js")
     //meta(name="viewport", content="initial-scale=1")
   body(ng-app="profile")
