--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -51,8 +51,8 @@
   .blog(ng-controller="blogCtrl")
     h2 Blog
     .post(ng-repeat="post in posts") 
-      a(ng-href="{{ 'http://krrishd.github.io/blog/post/' + post.url }}")
-        | {{ post.title + " - " + post.date }}
+      a(ng-href="{{  post.url }}")
+        | {{ post.title + " - " + (post.date | date)}}
   .twitterWidget
     <a class="twitter-timeline" href="https://twitter.com/krrishd" data-widget-id="426157309501255681">Tweets by @krrishd</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
