--- a/main.css
+++ b/main.css
@@ -33,6 +33,8 @@ a {
 	left: -10px;
 	width: 100%;
 	height: 70%;
+	border-bottom: 4px solid rgba(255,255,255,.8);
+	box-shadow: 1px 1px 3px 1px rgba(0,0,0,.6);
 }
 
 .item {
