--- a/main.css
+++ b/main.css
@@ -10,9 +10,10 @@ body {
 	font-family: Merriweather Sans, Helvetica Neue, sans-serif;
 	font-weight: 300;
 	color: #fff;
-	background: #333333;
+	/*background: #333333;
 	background: url('/img/bg.png');
-	background-attachment: fixed;
+	background-attachment: fixed;*/
+	background: #ecf0f1;
 	overflow-x: hidden;
 }
 
@@ -22,8 +23,20 @@ body {
 }*/
 
 a {
+	transition: .1s;
+	-webkit-transition: .1s;
+	-moz-transition: .1s;
 	text-decoration: none;
-	color: rgba(255,255,255,.6);
+	color: #8e44ad;
+	font-weight: 800;
+	font-family: Helvetica Neue, sans-serif;
+}
+
+a:hover {
+	transition: .1s;
+	-webkit-transition: .1s;
+	-moz-transition: .1s;
+	color: #2c3e50;
 }
 
 .hero {
@@ -35,27 +48,32 @@ a {
 	top: -10px;
 	left: -10px;
 	width: 100%;
-	height: 70%;
+	height: 25%;
 	border-bottom: 4px solid rgba(255,255,255,.8);
 	box-shadow: 1px 1px 3px 1px rgba(0,0,0,.6);
 }
 
 .item {
-	background: rgb(23,29,37);
-	width: 85%;
+	/*background: rgb(23,29,37);*/
+	width: 75%;
 	margin: 10px auto;
 	padding: 15px 30px;
 	border-radius: 5px;
-	box-shadow: 1px 1px 3px 1px rgba(0,0,0,.3);
-	border: 2px solid rgba(255,255,255,.7);
+	/*box-shadow: 1px 1px 3px 1px rgba(0,0,0,.3);
+	border: 2px solid rgba(255,255,255,.7);*/
 	font-size: 1.3em;
 	max-width: 850px;
+	color: #2c3e50;
 }
 
 .main.item {
-	position: absolute;
-	bottom: 10px;
-	width: 50%;
+    position: absolute;
+    bottom: 10px;
+    width: 50%;
+    background: rgba(255, 255, 255, 0.9);
+    border-radius: 3px;
+    /*border: 2px solid #fff;
+    box-shadow: inset 1px 1px 3px 1px rgba(0,0,0,.1);*/
 }
 
 .links ul {
@@ -88,6 +106,8 @@ a {
 
 .links li a {
 	color: rgba(0,0,0,.8);
+	font-family: Merriweather Sans, sans-serif !important;
+	font-weight: 300;
 }
 
 .work li {
@@ -123,6 +143,7 @@ a {
 .main .text {
 	display: inline-block;
 	vertical-align: middle;
+	font-weight: 300 !important;
 }
 
 .main img {
