more responsive shit

--- a/main.css
+++ b/main.css
@@ -245,5 +245,14 @@ nav li.true {
 	.titleSection {
 		position: relative;
 	}
+
+	nav {
+		position: relative;
+		margin-bottom: 50px;
+	}
+
+	body {
+		margin-top: 20px;
+	}
 }
 
