--- a/main.css
+++ b/main.css
@@ -106,6 +106,7 @@ nav li.true {
 	width: 50%;
 	border-radius: 7px;
 	box-shadow: 1px 1px 3px 1px rgba(0,0,0,.1);
+	background: url('/img/white_bg.png');
 }
 
 .portfolioItem .desc {
