--- a/main.css
+++ b/main.css
@@ -1,356 +1,1 @@
-@import url("/fonts/fonts.css");
-@import url('/animate.css');
-
-html {
-	height: 100%;
-	width: 100%;
-	margin: 0 auto;
-	background-image: url('/img/bg.jpg');
-	background-attachment: fixed;
-	background-size: cover;
-}
-
-body {
-	font-family: San Francisco, sans-serif;
-	color: rgba(0,0,0,.8);
-	margin-top: 100px;
-	padding-bottom: 60px;
-}
-
-a {
-	color: inherit;
-}
-
-.titleSection {
-	/* Rectangle 2: */
-	background-image: linear-gradient(148deg, #EEEEEE 0%, #D2E6ED 70%);
-	box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.50);
-	border-radius: 12px;
-	padding: 0px 20px;
-	position: fixed;
-	bottom: 10px;
-	width: 95%;
-	font-size: 1.3em;
-	margin: 10px auto;
-	left: 0;
-	right: 0;
-}
-
-.inlineItems {
-	display: inline-block;
-}
-
-.inlineItems > * {
-	display: inline-block;
-}
-
-nav {
-	background: rgba(0,0,0,.1);
-	border-radius: 12px;
-	width: 200px;
-	position: fixed;
-	top: 10px;
-	margin: 10px auto;
-	right: 0;
-	left: 0;
-	box-shadow: inset 1px 1px 3px 1px rgba(0,0,0,.1);
-	z-index: 99999;
-}
-
-nav ul {
-	margin: 0 auto;
-	text-align: center;
-	padding-left: 0;
-}
-
-nav li {
-	transition: .3s;
-	-webkit-transition: .3s;
-	-moz-transition: .3s;
-	cursor: pointer;
-    display: inline-block;
-    padding: 10px;
-    text-align: center;
-    width: 40%;
-    background: rgba(0,0,0,0);
-    border-radius: 12px;
-    box-shadow: none;
-    font-size: 1.3em;
-    color: #fff;
-   	text-shadow: 1px 1px 3px rgba(0,0,0,.1);
-}
-
-nav li.true {
-	transition: .3s;
-	-webkit-transition: .3s;
-	-moz-transition: .3s;
-	background: linear-gradient(148deg, #EEEEEE 0%, #D2E6ED 70%);
-    border-radius: 12px;
-    box-shadow: 1px 1px 3px 1px rgba(0,0,0,.1);
-    color: rgba(0,0,0,.8);
-    text-shadow: 1px 1px 3px rgba(0,0,0,0);
-}
-
-.portfolioItem {
-	margin: 30px auto;
-	text-align: center;
-	width: 50%;
-	display: inline-block;
-}
-
-.portfolioItem img {
-	display: inline-block;
-	width: 50%;
-	border-radius: 7px;
-	box-shadow: 1px 1px 3px 1px rgba(0,0,0,.1);
-	background: linear-gradient(148deg, #EEEEEE 0%, #D2E6ED 70%);
-}
-
-.portfolioItem .desc {
-	display: inline-block;
-	width: 30%;
-	vertical-align: top;
-	text-align: left;
-	margin-left: 20px;
-	color: #FFFFFF;
-	text-shadow: 0px 1px 4px rgba(0,0,0,0.50);
-}
-
-.portfolioItem .desc h1 {
-	font-size: 2.2em;
-	font-weight 600;
-	margin-bottom: 0;
-}
-
-.portfolioItem .desc .url {
-	color: #fff;
-	font-weight: 600;
-	font-size: .9em;
-	text-decoration: none;
-}
-
-.portfolioItem .desc p.long-desc {
-	font-size: 1em;
-	font-weight: 400;
-}
-
-.aboutSection {
-    width: 50%;
-    max-width: 500px;
-    margin: 40px auto;
-    padding: 30px;
-    border-radius: 7px;
-    background: linear-gradient(148deg, #EEEEEE 0%, #D2E6ED 100%);
-    box-shadow: 1px 1px 3px 1px rgba(0,0,0,.1);
-    font-size: 1.1em;
-}
-
-.aboutSection p {
-	margin-bottom: 45px;
-}
-
-.links {
-	display: inline-block;
-	vertical-align: center;
-	margin-left: 3px;
-	padding-bottom: 30px;
-}
-
-.links a {
-	margin: 0 10px;
-}
-
-.links:before {
-	content: '//';
-}
-
-.insta {
-	min-width: auto !important;
-	text-align: center;
-	padding: 0 !important;
-	width: 23%;
-}
-
-.insta .logo {
-	max-width: 115px;
-	width: 70%;
-	padding: 10px;
-}
-
-.insta .thumb {
-	max-width: 170px;
-	max-height: 170px;
-	width: 60%;
-	border-radius: 7px;
-	box-shadow: 1px 1px 3px 1px rgba(0,0,0,.2);
-	margin:0 auto;
-	display: block;
-}
-
-.aboutSection {
-	float: right;
-	margin: 10px;
-}
-
-.last {
-	padding-top: 10px;
-	padding-bottom: 10px;
-	padding-left: 10px;
-}
-
-.last .title {
-	margin: 5px 0px;
-}
-
-.last .art {
-	height: 100px;
-	border-radius: 7px;
-	box-shadow: 1px 1px 3px 1px rgba(0,0,0,.2);
-	display: inline-block;
-}
-
-.last .text {
-	display: inline-block;
-	vertical-align: bottom;
-	margin-left: 10px;
-}
-
-.last .name {
-	margin-bottom: 0 !important;
-}
-
-.last .name .strong {
-	width: 100%;
-}
-
-.last .text p {
-	margin-top: 20px;
-	line-height: 0;
-}
-
-.last .eq {
-	width: 20px;
-	margin-right: 5px;
-}
-
-.aboutContainer {
-	width: 80%;
-	margin: 10px auto;
-}
-
-@media(max-width:1150px) {
-	.portfolioItem {
-		display: block;
-		width: 95%;
-	}
-
-	.portfolioItem img {
-		width: 50%;
-	}
-}
-
-@media(max-width: 1000px) {
-	.titleSection {
-		width: 80%;
-	}
-}
-
-@media(max-width: 890px) {
-	.titleSection {
-		font-size: 1em;
-	}
-
-	body {
-		margin-top: 130px;
-	}
-}
-
-@media(max-width: 700px) {
-	.titleSection {
-		font-size: .7em;
-	}
-}
-
-@media(max-width: 650px) {
-	.portfolioItem .desc {
-		vertical-align: center;
-	}
-
-	.portfolioItem .desc .url {
-		font-size: .7em;
-	}
-
-	.portfolioItem .desc h1 {
-		font-size: 1.4em;
-	}
-
-	.portfolioItem img {
-		vertical-align: bottom;
-	}
-
-}
-
-@media(max-width: 560px) {
-	.portfolioItem img {
-		display: block;
-		width: 90%;
-		margin: 10px auto;
-	}
-
-	.portfolioItem .desc {
-		width: 90%;
-		margin: 10px auto;
-	}
-
-	.aboutContainer {
-		width: 110%;
-		margin-left: -7%;
-	}
-
-	.aboutText p {
-		width: 80%;
-	}
-
-	.aboutSection {
-		display: block;
-		float: none;
-		width: 100% !important;
-		margin-bottom: 40px;
-	}
-
-	.insta {
-		padding-bottom: 5px !important;
-		width: 30% !important;
-		min-width: 200px !important;
-		text-align: center;
-		margin: 10px auto;
-		margin-bottom: 40px;
-	}
-
-	.titleSection {
-		position: relative;
-	}
-
-	nav {
-		position: relative;
-		margin-bottom: 50px;
-	}
-
-	body {
-		margin-top: 20px;
-	}
-}
-
-@media(max-width: 400px) {
-	.last {
-		font-size: .8em;
-	}
-
-	html {
-		background-image: url('/img/light_bg.jpg');
-		background-attachment: initial;
-		background-size: cover;
-	}
-}
-
-
+@import "https://fonts.googleapis.com/css?family=Baloo+Chettan";@import "https://fonts.googleapis.com/css?family=Hammersmith+One";html{height:100%;width:100%;margin:0 auto}body{color:rgba(0,0,0,0.6);width:100%;height:100%;font-family:Hammersmith One,sans-serif}body h1{font-family:Baloo Chettan,sans-serif;font-weight:800}body h1.name{font-size:5em;margin:50px auto;text-align:center}body h1.name:after{content:"";border:3px solid #F1A9A0;display:block;margin:10px auto;width:30%}body a{color:#E08283}.about,.contact{text-align:center;font-size:1.2em;width:40%;min-width:320px;margin:10px auto}.about .slice,.contact .slice{color:#F27935}.about .twitter,.contact .twitter{color:#22A7F0}.contact{margin-top:40px;width:30%;min-width:300px}.container{min-height:calc(100% - 75px);margin-bottom:-142px}.container:after{content:"";display:block;height:142px}footer{text-align:center;font-size:1.1em;margin-top:100px;color:rgba(0,0,0,0.4);height:142px}footer:before{border:1px solid rgba(0,0,0,0.1);display:block;content:""}
