--- a/_harp/_layout.jade
+++ b/_harp/_layout.jade
@@ -4,6 +4,7 @@ html
 		title krish dholakiya
 		link(href="/main.css", type="text/css", rel="stylesheet")
 		script(src="/app.js")
+		meta(name="viewport", content="width=device-width, initial-scale=1")
 	body
 		.container
 			!= yield
