--- a/_harp/main.less
+++ b/_harp/main.less
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-	color: rgba(0,0,0,.6);
+	color: rgba(0,0,0,.7);
 	width: 100%;
 	height: 100%;
 	font-family: Hammersmith One, sans-serif;
@@ -19,7 +19,8 @@ body {
 			font-size: 5em;
 			margin: 50px auto;
 			text-align: center;
-			&:after {
+			color: rgba(0,0,0,.8)
+;			&:after {
 				content: "";
 				border: 3px solid #F1A9A0;
 				display: block;
