--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -1,4 +1,4 @@
-h1.name krish dholakiya
+h1.name.element-animated.slide-from-top.short krish dholakiya
 .about
 	p I'm a software engineer who dabbles in everything from design to music. I'm a cofounder of 
 		a.slice(href="//slice.capital") slice.capital
