--- a/_harp/main.less
+++ b/_harp/main.less
@@ -1,5 +1,6 @@
 @import "https://fonts.googleapis.com/css?family=Baloo+Chettan";
 @import "https://fonts.googleapis.com/css?family=Hammersmith+One";
+@import "https://rawgit.com/szynszyliszys/repaintless/44b17b693bb5112c730ad1d25801bb74ce211e32/repaintless-css/repaintless.min.css";
 
 html {
 	height: 100%;
@@ -12,6 +13,7 @@ body {
 	width: 100%;
 	height: 100%;
 	font-family: Hammersmith One, sans-serif;
+	margin-left:0;
 	h1 {
 		font-family: Baloo Chettan, sans-serif;
 		font-weight: 800;
