--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -7,7 +7,7 @@ h1.name.element-animated.slide-from-top.short krish dholakiya
 		| .
 .contact
 	p Let's talk: you can email me at 
-		a.slice(href="mailto:krish@slice.capital") krish@slice.capital
+		a(href="mailto:krish@slice.capital") krish@slice.capital
 		|  or 
 		a.twitter(href="https://twitter.com/messages/compose?recipient_id=114597133") DM me on Twitter
 		| . Here's my 
