--- a/_harp/main.less
+++ b/_harp/main.less
@@ -95,9 +95,7 @@ footer {
 
 @media(max-width: 420px) {
 	.about, .contact {
-		p {
-			margin-left: -5%;
-		}
+		min-width: 285px;
 	}
 	footer {
 		font-size: .8em;
