--- a/_harp/_layout.jade
+++ b/_harp/_layout.jade
@@ -3,10 +3,13 @@ html
 	head
 		title krish dholakiya
 		link(href="/main.css", type="text/css", rel="stylesheet")
+		script(src="https://use.fontawesome.com/d3feeaad9a.js")
 		script(src="/app.js")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
 	body
 		.container
 			!= yield
 		footer
-			p Made w love in Boulder. Work in progress :)
+			p Made with 
+				i.fa.fa-heart
+				|  in Boulder. Work in progress :)
