--- a/_harp/main.less
+++ b/_harp/main.less
@@ -65,6 +65,17 @@ body {
 	}
 }
 
+@-webkit-keyframes pulsate {
+    0% { transform: scale(1); }
+	30% { transform: scale(1); }
+	40% { transform: scale(1.08); }
+	50% { transform: scale(1); }
+	60% { transform: scale(1); }
+	70% { transform: scale(1.05); }
+	80% { transform: scale(1); }
+	100% { transform: scale(1); }
+}
+
 footer {
 	text-align: center;
 	font-size: 1.1em;
@@ -75,6 +86,11 @@ footer {
 		border: 1px solid rgba(0,0,0,.1);
 		display: block;
 		content: "";
+	}
+	.fa-heart {
+		color: red;
+		-webkit-animation: pulsate 1s ease-out;
+    	-webkit-animation-iteration-count: infinite; 
 	}
 }
 
