added music thing

--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -13,3 +13,4 @@ h1.name.element-animated.slide-from-top.short krish dholakiya
 		| . Here's my 
 		a.resume(href="/resume.pdf") resumé
 		|  if that's what you're looking for.
+#app
