--- a/_harp/main.less
+++ b/_harp/main.less
@@ -94,6 +94,31 @@ footer {
 	}
 }
 
+.music {
+	width: 80%;
+	max-width: 800px;
+	margin: 50px auto;
+	text-align: center;	
+	img, .text {
+		display: inline-block;
+	}
+	img {
+		width: 100px;
+		border-radius: 3px;
+	}
+	.eq {
+		width: 20px;
+	}
+	.text {
+		vertical-align: top;
+		margin-left: 15px;
+		text-align: left;
+		.name {
+			margin-bottom: -10px;
+		}
+	}
+}
+
 @media(max-width: 575px) {
 	body {
 		h1 {
