--- a/_harp/_layout.jade
+++ b/_harp/_layout.jade
@@ -4,6 +4,9 @@ html
 		title krish dholakiya
 		link(href="/main.css", type="text/css", rel="stylesheet")
 		script(src="https://use.fontawesome.com/d3feeaad9a.js")
+		script(src="https://npmcdn.com/react@15.3.1/dist/react.min.js")
+		script(src="https://npmcdn.com/react-dom@15.3.1/dist/react-dom.min.js")
+		script(src="https://npmcdn.com/jquery@3.1.0/dist/jquery.min.js")
 		script(src="/app.js")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
 	body
@@ -13,3 +16,4 @@ html
 			p Made with 
 				i.fa.fa-heart
 				|  in Boulder. Work in progress :)
+	script(src="/js/components.js")
