--- a/_harp/main.less
+++ b/_harp/main.less
@@ -99,12 +99,12 @@ footer {
 	max-width: 800px;
 	margin: 50px auto;
 	text-align: center;	
-	img, .text {
+	.gradient, .text {
 		display: inline-block;
 	}
 	img {
 		width: 100px;
-		border-radius: 3px;
+		border-radius: 5px;
 	}
 	.eq {
 		width: 20px;
