--- a/_harp/_layout.jade
+++ b/_harp/_layout.jade
@@ -7,6 +7,7 @@ html
 		script(src="https://npmcdn.com/react@15.3.1/dist/react.min.js")
 		script(src="https://npmcdn.com/react-dom@15.3.1/dist/react-dom.min.js")
 		script(src="https://npmcdn.com/jquery@3.1.0/dist/jquery.min.js")
+		script(src="https://npmcdn.com/grade-js/docs/dist/grade.js")
 		script(src="/app.js")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
 	body
