--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -1,8 +1,21 @@
 h1.name.element-animated.slide-from-top.short krish dholakiya
 .about
-	p I'm a software engineer who dabbles in everything from design to music. I'm a cofounder of 
+	p I'm a 
+		b software engineer 
+		| who dabbles in everything from 
+		b design 
+		| to 
+		b music
+		| . I work on 
 		a.slice(href="//slice.capital") slice.capital
-		| , and also work part-time as a freelance software developer. I take interest in music (production and as a listener), politics, and other things you might see pop-up from time to time on my 
+		| , and also work part-time as a 
+		b freelance software developer
+		| . 
+	p I take interest in 
+		b music 
+		| (production and as a listener), 
+		b politics
+		| , and other things you might see pop-up from time to time on my 
 		a.twitter(href="//twitter.com/krrishd") twitter
 		| .
 .contact
