--- a/_harp/main.less
+++ b/_harp/main.less
@@ -1,5 +1,8 @@
 @import "https://fonts.googleapis.com/css?family=Baloo+Chettan";
 @import "https://fonts.googleapis.com/css?family=Hammersmith+One";
+@import "https://fonts.googleapis.com/css?family=Playfair+Display";
+@import "https://fonts.googleapis.com/css?family=Playfair+Display+SC:400,800";
+@import "https://fonts.googleapis.com/css?family=Josefin+Sans";
 @import "https://rawgit.com/szynszyliszys/repaintless/44b17b693bb5112c730ad1d25801bb74ce211e32/repaintless-css/repaintless.min.css";
 
 html {
@@ -9,12 +12,14 @@ html {
 
 body {
 	color: rgba(0,0,0,.7);
+	background: rgba(255,255,255,.5);
 	width: 100%;
 	height: 100%;
-	font-family: Hammersmith One, sans-serif;
+	font-size: 0.9em;
+	font-family: Playfair Display, Hammersmith One, sans-serif;
 	margin-left:0;
 	h1 {
-		font-family: Baloo Chettan, sans-serif;
+		font-family: Playfair Display, Baloo Chettan, sans-serif;
 		font-weight: 800;
 		&.name {
 			font-size: 5em;
@@ -30,8 +35,15 @@ body {
 			}
 		}
 	}
+	b {
+		font-family: Playfair Display SC, serif;
+		font-weight: 400;
+		color: rgba(0,0,0,1);
+	}
 	a {
 		color: #E08283;
+		text-decoration: none;
+		border-bottom: 1px dotted #E08283;
 	}
 }
 
