--- a/_harp/main.less
+++ b/_harp/main.less
@@ -11,13 +11,14 @@ html {
 }
 
 body {
-	color: rgba(0,0,0,.7);
+	color: rgba(0,0,0,1);
 	background: rgba(255,255,255,.5);
 	width: 100%;
 	height: 100%;
-	font-size: 0.9em;
 	font-family: Playfair Display, Hammersmith One, sans-serif;
 	margin-left:0;
+	font-size: .9em;
+	-webkit-font-smoothing: antialiased;
 	h1 {
 		font-family: Playfair Display, Baloo Chettan, sans-serif;
 		font-weight: 800;
@@ -38,7 +39,6 @@ body {
 	b {
 		font-family: Playfair Display SC, serif;
 		font-weight: 400;
-		color: rgba(0,0,0,1);
 	}
 	a {
 		color: #E08283;
@@ -49,10 +49,14 @@ body {
 
 .about, .contact {
 	text-align: center;
-	font-size: 1.2em;
+	text-align: left;
+	font-size: 1.5em;
 	width: 40%;
 	min-width: 320px;
 	margin: 10px auto;
+	p {
+		margin: 30px auto;
+	}
 	.slice {
 		color: #F27935;
 	}
@@ -62,8 +66,6 @@ body {
 }
 
 .contact {
-	margin-top: 40px;
-	width: 30%;
 	min-width: 300px;
 }
 
