more aesthetic stuff

--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -5,7 +5,7 @@ h1.name.element-animated.slide-from-top.short krish dholakiya
 		| who dabbles in everything from 
 		b design 
 		| to 
-		b music
+		b product
 		| . I work on 
 		a.slice(href="//slice.capital") slice.capital
 		| , and also work part-time as a 
