--- a/_harp/main.less
+++ b/_harp/main.less
@@ -12,12 +12,12 @@ html {
 
 body {
 	color: rgba(0,0,0,1);
-	background: rgba(255,255,255,.5);
+	background: rgba(242, 243, 244, .2);
 	width: 100%;
 	height: 100%;
 	font-family: Playfair Display, Hammersmith One, sans-serif;
 	margin-left:0;
-	font-size: .9em;
+	font-size: .7em;
 	-webkit-font-smoothing: antialiased;
 	h1 {
 		font-family: Playfair Display, Baloo Chettan, sans-serif;
@@ -41,9 +41,22 @@ body {
 		font-weight: 400;
 	}
 	a {
+		transition: .1s;
+		-webkit-transition: .1s;
+		-moz-transition: .1s;
 		color: #E08283;
 		text-decoration: none;
 		border-bottom: 1px dotted #E08283;
+		padding: 0 5px;
+		&:hover {
+			transition: .1s;
+			-webkit-transition: .1s;
+			-moz-transition: .1s;
+			border-bottom: 2px solid #E08283;
+			background: #E08283;
+			color: #fff !important;
+			text-shadow: 1px 1px 3px rgba(0,0,0,.1);
+		}
 	}
 }
 
@@ -51,7 +64,7 @@ body {
 	text-align: center;
 	text-align: left;
 	font-size: 1.5em;
-	width: 40%;
+	width: 30%;
 	min-width: 320px;
 	margin: 10px auto;
 	p {
@@ -63,10 +76,6 @@ body {
 	.twitter {
 		color: #22A7F0;
 	}
-}
-
-.contact {
-	min-width: 300px;
 }
 
 @-webkit-keyframes pulsate {
@@ -82,9 +91,8 @@ body {
 
 footer {
 	text-align: center;
-	font-size: 1.1em;
+	font-size: 1.5em;
 	color: rgba(0,0,0,.4);
-	height: 142px;
 	&:before {
 		border: 1px solid rgba(0,0,0,.1);
 		display: block;
@@ -101,7 +109,8 @@ footer {
 	width: 80%;
 	max-width: 800px;
 	margin: 50px auto;
-	text-align: center;	
+	text-align: center;
+	font-size: 1.25em;
 	.gradient, .text {
 		display: inline-block;
 	}
@@ -133,15 +142,18 @@ footer {
 	}
 
 	.about, .contact {
-		font-size: 1em;
+		font-size: 1.35em;
 	}
 }
 
 @media(max-width: 420px) {
+	.music {
+		font-size: 1.1em;
+	}
 	.about, .contact {
 		min-width: 285px;
 	}
 	footer {
-		font-size: .8em;
+		font-size: 1em;
 	}
 }
